# internal/delivery/http/handler/response.go
@@ -5,11 +5,28 @@ import (
 	"net/http"
 )
 
+type errorResponse struct {
+	Message string `json:"message"`
+}
+
+type tokensResponse struct {
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
+
+type userResponse struct {
+	UserId int `json:"userId"`
+}
+
+type homeResponse struct {
+	UserId int `json:"userId"`
+}
+
 func newErrorResponse(resp http.ResponseWriter, statusCode int, message string) {
-	response := map[string]interface{}{
-		"message": message,
+	err := errorResponse{
+		Message: message,
 	}
 	resp.Header().Set(contentType, applicationJson)
 	resp.WriteHeader(statusCode)
-	json.NewEncoder(resp).Encode(response)
+	json.NewEncoder(resp).Encode(err)
 }
